<resources>
    <string name="app_name">BLE Beacon App</string>
    <string name="title_activity_location">Location</string>
    <string name="title_activity_locations">Locations</string>
    <string name="base_url">http://audiogarden.t6iqccz7ds.eu-west-2.elasticbeanstalk.com/</string>
    <string name="title_activity_map">Map</string>
    <string name="locations_storage">locations_pref</string>
    <string name="title_activity_help">Help</string>
    <string name="action_settings">Settings</string>

    <!-- User guide settings -->
    <string name="user_guide_settings">user_guide_settings</string>
    <string name="user_guide_settings_main">user_guide_settings_main</string>
    <string name="user_guide_settings_locations">user_guide_settings_locations</string>
    <string name="user_guide_settings_location">user_guide_settings_location</string>

    <!-- Strings related to Main -->

    <string name="txtMap">Map</string>
    <string name="descriptionMap">Small map icon to represent the map page</string>
    <string name="txtLocations">Locations</string>
    <string name="descriptionLocations">Small </string>
    <string name="txtHelp">Help</string>
    <string name="descriptionHelp">Small question mark icon to represent the help page</string>
    <string name="txtSettings">Settings</string>
    <string name="descriptionSettings">Small cog icon to represent the settings page</string>


    <!-- Strings related to Help -->
    <string name="guide_help_all_screens_switch_text">Switch all screens guide</string>
    <string name="guide_help_main_screen_switch_text">Switch main screen guide</string>
    <string name="guide_help_locations_screen_switch_text">Switch locations screens guide</string>
    <string name="guide_help_location_screen_switch_text">Switch location screens guide</string>

    <!-- Strings related to Location -->
    <string name="strSearching">Searching for beacons&#8230;</string>
    <string name="strFound">Beacon found! Playing&#8230;</string>
    <string name="strReplay">Replaying the sounds!</string>
    <string name="strPaused">Pausing!</string>
    <string name="strPlay">Playing!</string>
    <string name="strRestartLoc">No more devices. Please use reset button!</string>

    <!-- Strings related to Notification Bar -->
    <string name="cd_repeat">Reset the audio for all beacons</string>
    <string name="cd_play">Play and pause current track</string>
    <string name="cd_stop">Stop all sounds from the current beacon</string>

    <!-- Errors messeges -->
    <string name="server_error">Cannot connect with the server</string>

    <!-- User guide -->
    <string name="guide_main_welcome_title">Welcome!</string>
    <string name="guide_main_welcome_text">This application lets you engage with our interactive gardens in a whole new way. I would like to invite you to take a tour
        through application with me.</string>
    <string name="guide_main_locations_btn_title">Locations button</string>
    <string name="guide_main_locations_btn_text">The locations button takes you to the next screen, a list of interactive places supported by this app.</string>
    <string name="guide_main_map_btn_title">Map menu</string>
    <string name="guide_main_map_btn_text">The map button displays the locations of all interactive places supported by this app.</string>
    <string name="guide_main_help_btn_title">Help menu</string>
    <string name="guide_main_help_btn_text">If you don\'t need this guide, you can use the Help section to turn if off. This menu will also allow you to run the guide
        again or select a specific part you\'d like to re-run.</string>

    <string name="guide_locations_location_btn_title">Selecting location</string>
    <string name="guide_locations_location_btn_text">In order to interact with the location you are currently in, please select its name from the list.</string>

    <string name="guide_location_title">Location screen</string>
    <string name="guide_location_text">This screen is used to interact with the location. When you press next, the application will start to play music and listen for
        signals coming from transmitters located throughout this location.</string>
    <string name="guide_location_scanner_status_indicator_title">Scanner status</string>
    <string name="guide_location_scanner_status_indicator_text">This object will show you the current status of the scanner. It will tell you when the app is scanning or whether music is playing or paused.
        It also tells you when you have found all of the transmitters for your current location.</string>
    <string name="guide_location_stop_replay_btn_title">Stop/Replay Button</string>
    <string name="guide_location_stop_replay_btn_text">Use this button to stop current sounds or replay last track. A dark background indicates that button is currently disabled
        and cannot be used. A blue background means the button is enabled.</string>
    <string name="guide_location_pause_start_btn_title">Pause/Start Button</string>
    <string name="guide_location_pause_start_btn_text">Use this button to pause or play the current sound.</string>
    <string name="guide_location_reload_loc_btn_title">Reload Button</string>
    <string name="guide_location_reload_loc_btn_text">When the scanner indicates that there are no more transmitters to scan in this location, you can use this button to reset the app
        and go around the location once again.</string>
    <string name="guide_location_notification_bar_title">Lock screen controls</string>
    <string name="guide_location_notification_bar_text">These same controls can be found in the notification bar and are displayed if you pull your notification bar down,
        when the application is running in the background or when the device is locked.</string>

    <string name="guide_next_btn">Next</string>
    <string name="guide_close_btn">Close</string>
</resources>
