<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="1"
    android:orientation="vertical"
    tools:context="uk.ac.napier.audiogarden.MainActivity">
    <!-- New Row -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:baselineAligned="false">

        <!-- Locations Button -->
        <RelativeLayout
            android:id="@+id/btnGarden"
            android:clickable="true"
            android:background="@color/green"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">
            <ImageView
                android:id="@+id/locationsImage"
                android:src="@drawable/ic_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"/>
            <TextView
                android:text="@string/txtLocations"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtLocations"
                android:gravity="center"
                android:layout_below="@+id/locationsImage"/>

        </RelativeLayout>
    </LinearLayout>

    <!-- New Row -->
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:baselineAligned="false">

        <!-- Map Button -->
        <RelativeLayout
            android:id="@+id/btnMap"
            android:clickable="true"
            android:background="@color/brown"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">
            <ImageView
                android:id="@+id/mapImage"
                android:src="@drawable/ic_map"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"/>
            <TextView
                android:text="@string/txtMap"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtMap"
                android:gravity="center"
                android:layout_below="@+id/mapImage"/>
        </RelativeLayout>

        <!-- Help Button -->
        <RelativeLayout
            android:id="@+id/btnHelp"
            android:clickable="true"
            android:background="@color/redBrown"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">
            <ImageView
                android:id="@+id/helpImage"
                android:src="@drawable/ic_help"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"/>
            <TextView
                android:text="@string/txtHelp"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtHelp"
                android:gravity="center"
                android:layout_below="@+id/helpImage"/>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>
